tests/NormalTests/paczka2/big_fuzzy/85067232.err
Error in line 6: smeB8YR S635 81,0
Error in line 10: QFTh0kvUb S410 14,1
Error in line 15: smeB8YR A463 -1,1
Error in line 27: aAZBpB6e0M S410 85,9
Error in line 32: hpmcUV87J S635 14,4
Error in line 9: smeB8YR A463 18,1
Error in line 40: aAZBpB6e0M S410 88,0
Error in line 26: kVqxLJjD5Yx A463 44,9
Error in line 67: smeB8YR S410 25,5
Error in line 84: ur4kRpMWe3 S410 44,M
Error in line 76: smeB8YR A463 9,5
Error in line 72: ur4kRp8We3 S635 74,4
Error in line 96: A463 S410 76,47
Error in line 91: aAZBpB6e0M A463 372,8
Error in line 101: kVqxLJjD5Yx A503 342,0
Error in line 95: A463 A463 13,9
Error in line 103: A463 S410 282,3
Error in line 118: ur4kRp8We3 A463 13,4
Error in line 113: kVqxLJjD5Yx S410 55,8
Error in line 111: aAZBpB6e0M S410 144,7
Error in line 124: ur4kRp8We3 S635 30,4
Error in line 142: hpmcUV87J S410 64,6
Error in line 98: QFTh0kvUb A503 209,5
Error in line 131: kVqxLJjD5Yx A503 17,5
Error in line 162: aAZBpB6e0M S410 -1,2
Error in line 183: QFTh0kvUb A463 103,9
Error in line 174: A463 S635 60,9
Error in line 188: ur4kRp8We3 A463 68,7
Error in line 204: kVqxLJjD5Yx S410 24,97
Error in line 143: aAZBpB6e0M S410 42,3
Error in line 205: QFTh0kvUb A463 19,8
Error in line 210: aAZBpB6e0M A463 32,9
Error in line 220: ur4kRp8We3 S635 72,6
Error in line 231: QFTh0kvUb A503 74,4
Error in line 240: aAZBpB6e0M A463 38,0
